# pyextract

./: pyproject.toml  readme.md
pyextract/: main.py
tests/: test_main.py
